<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".Variant1">

    <!--find oxygen flow-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_oxyConc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">


        <TextView

            android:id="@+id/decrOxyPer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="-"
            android:textSize="20sp"
            android:layout_weight="0"

            />
        <EditText
            android:id="@+id/inputOxyConc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_conc_by_default"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/incrOxyPer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="+"
            android:textSize="20sp"
            android:layout_weight="0"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_air_flow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

    <TextView

            android:id="@+id/decrAirFlow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="-"
            android:textSize="20sp"
            android:layout_weight="0"

            />
        <EditText
            android:id="@+id/inputAirFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_flow_by_default"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/incrAirFlow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="+"
            android:textSize="20sp"
            android:layout_weight="0"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">


        <TextView
            android:id="@+id/outputData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/answer_by_default"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/onCalcOxyFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/find_oxy_flow"
        android:textSize="20sp"/>
</LinearLayout>
