<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/oxyFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_oxy_flow"
        android:layout_marginBottom="20sp"/>

    <TextView
        android:id="@+id/oxyConc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_oxy_conc"
        android:layout_marginBottom="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_oxy_in_air_conc" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >


        <TextView

            android:id="@+id/decrOxyInAir"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="-"
            android:textSize="20sp"
            android:layout_weight="0"

            />
        <EditText
            android:id="@+id/inputOxyInAirPerc"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/oxy_in_air_conc_by_default"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/incrOxyInAir"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="+"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/toDefaultOxyInAir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="to \ndefault"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/warning_oxyInAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_oxy_purity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">



        <TextView

            android:id="@+id/decrOxyPurity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="-"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/inputOxyPurity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/oxy_purity_by_default"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/incrOxyPurity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="+"
            android:textSize="20sp"
            android:layout_weight="0"

            />
        <TextView
            android:id="@+id/toDefaultOxyPurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:text="to \ndefault"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/warning_oxyPurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
